<resources>
    <string name="app_name">Senseo</string>

    <string name="connected">not connected</string>

    <string name="power">power</string>
    <string name="one_cup">one cup</string>
    <string name="two_cups">two cups</string>

    <string name="make_one_cup">make one cup when ready</string>
    <string name="make_two_cups">make two cups when ready</string>

    <string name="find_senseo">find senseo</string>
    <string name="exception_text">can\'t find senseo in Network</string>
    <string name="add_ip">add ip</string>
    <string name="settings">settings</string>
    <string name="address">ip address</string>

    <string name="timer">timer</string>
    <string name="add_timer">add timer</string>
    <string name="timer_activated">activated</string>
    <string name="timer_deactivated">deactivated</string>
    <string name="timer_powerOn">power on</string>
    <string name="timer_daily">daily</string>
    <string name="timer_one_cup">make one cup</string>
    <string name="timer_two_cups">make two coups</string>
    <string name="timer_remove">remove</string>
    <string name="timer_success">sending success</string>

    <string name="save">save</string>
    <string name="back">back</string>
</resources>